Corrigir nome de variavel

--- a/Notebooks/Titanic - com tratamento.ipynb
+++ b/Notebooks/Titanic - com tratamento.ipynb
@@ -67,20 +67,20 @@
     "    \n",
     "    # Tiramos a média e o desvio padrão de cada sequência de testes. \n",
     "    # Por padrão é feita validação cruzada em 3 conjuntos de dados.\n",
-    "    media_in = np.mean(score_in, axis=1)\n",
+    "    mean_in = np.mean(score_in, axis=1)\n",
     "    std_in = np.std(score_in, axis=1)\n",
-    "    media_out = np.mean(score_out, axis=1)\n",
+    "    mean_out = np.mean(score_out, axis=1)\n",
     "    std_out = np.std(score_out, axis=1)\n",
     "    \n",
     "    # O desempenho de treinamento fica em vermelho e o de validação em verde\n",
-    "    plt.plot(points, media_in, 'o-', color='red', label='Treinamento')\n",
-    "    plt.plot(points, media_out, 'o-', color='green', label='Teste')\n",
+    "    plt.plot(points, mean_in, 'o-', color='red', label='Treinamento')\n",
+    "    plt.plot(points, mean_out, 'o-', color='green', label='Teste')\n",
     "    \n",
     "    # Os desvios ficam ao redor das linhas para indicar a variação no aprendizado\n",
-    "    plt.fill_between(points, media_in - std_in,\n",
-    "                     media_in + std_in, color='red', alpha=0.1)\n",
-    "    plt.fill_between(points, media_out - std_out,\n",
-    "                     media_out + std_out, color='green', alpha=0.1)\n",
+    "    plt.fill_between(points, mean_in - std_in,\n",
+    "                     mean_in + std_in, color='red', alpha=0.1)\n",
+    "    plt.fill_between(points, mean_out - std_out,\n",
+    "                     mean_out + std_out, color='green', alpha=0.1)\n",
     "    \n",
     "    plt.legend()\n",
     "    return plt"
